fixes type of MappableSingleColumnSelect, and fixing type selection for QueryStatisticsTest