@@ -1,6 +1,5 @@
 package com.bakdata.conquery;
 
-import java.util.Collections;
 import java.util.Set;
 
 import com.bakdata.conquery.apiv1.forms.FeatureGroup;
@@ -20,47 +19,34 @@ public class ConqueryConstants {
 	public static final String EXTENSION_DESCRIPTION = ".import.json";
 
 	public static final ResultInfo DATES_INFO =
-			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).dates(), new ResultType.ListT<>(ResultType.Primitive.DATE_RANGE), Set.of(new SemanticType.EventDateT()));
+			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).dates(),null, new ResultType.ListT<>(ResultType.Primitive.DATE_RANGE),null, Set.of(new SemanticType.EventDateT()));
 
 	public static final ResultInfo DATES_INFO_HISTORY =
-			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).dates(), new ResultType.ListT<>(ResultType.Primitive.DATE_RANGE), Set.of(new SemanticType.EventDateT(), new SemanticType.GroupT()));
+			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).dates(), null,new ResultType.ListT<>(ResultType.Primitive.DATE_RANGE),null, Set.of(new SemanticType.EventDateT(), new SemanticType.GroupT()));
 
 
 	public static final ResultInfo
 			SOURCE_INFO =
-			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).source(), ResultType.Primitive.STRING, Set.of(new SemanticType.SourcesT(), new SemanticType.CategoricalT(), new SemanticType.GroupT()));
+			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).source(),null, ResultType.Primitive.STRING,null, Set.of(new SemanticType.SourcesT(), new SemanticType.CategoricalT(), new SemanticType.GroupT()));
 
 	// Form related constants
 	public static final String SINGLE_RESULT_TABLE_NAME = "results";
 	public static final ResultInfo CONTEXT_INDEX_INFO =
-			LocalizedDefaultResultInfo.builder()
-									  .type(ResultType.Primitive.INTEGER)
-									  .semantics(Collections.emptySet())
-									  .localizedDefaultLabelProvider((l) -> l.getLocalized(ResultHeadersC10n.class).index())
-									  .localizedLabelProvider((l) -> l.getLocalized(ResultHeadersC10n.class).index())
-									  .build();
+			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).index(),null, ResultType.Primitive.INTEGER,null, Set.of());
+
 
 	public static final ResultInfo DATE_RANGE_INFO =
-			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).dateRange(), ResultType.Primitive.DATE_RANGE, Set.of());
+			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).dates(),null, ResultType.Primitive.DATE_RANGE,null, Set.of());
+
 	public static final ResultInfo RESOLUTION_INFO =
-			LocalizedDefaultResultInfo.builder()
-									  .type(ResultType.Primitive.STRING)
-									  .semantics(Collections.emptySet())
-									  .localizedDefaultLabelProvider((l) -> l.getLocalized(ResultHeadersC10n.class).resolution())
-									  .localizedLabelProvider((l) -> l.getLocalized(ResultHeadersC10n.class).resolution())
-									  .printer(new Resolution.LocalizingPrinter())
-									  .build();
+			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).resolution(),null, ResultType.Primitive.STRING,new Resolution.LocalizingPrinter(), Set.of());
+
+
 	public static final ResultInfo EVENT_DATE_INFO =
-			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).eventDate(), ResultType.Primitive.DATE, Set.of());
+			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).eventDate(),null, ResultType.Primitive.DATE, null, Set.of());
 
 	public static final ResultInfo OBSERVATION_SCOPE_INFO =
-			LocalizedDefaultResultInfo.builder()
-									  .type(ResultType.Primitive.STRING)
-									  .semantics(Collections.emptySet())
-									  .localizedDefaultLabelProvider((l) -> l.getLocalized(ResultHeadersC10n.class).observationScope())
-									  .localizedLabelProvider((l) -> l.getLocalized(ResultHeadersC10n.class).observationScope())
-									  .printer(new FeatureGroup.LocalizingPrinter())
-									  .build();
+			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).observationScope(),null, ResultType.Primitive.STRING, new FeatureGroup.LocalizingPrinter(), Set.of());
 
 	/**
 	 * Drawn from random.org
